--- a/MeowMeow/View/Cells/CatDataCell.xib
+++ b/MeowMeow/View/Cells/CatDataCell.xib
@@ -5,13 +5,12 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CatDataCell" customModule="MeowMeow" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostDataCell" rowHeight="101" id="KGk-i7-Jjw" customClass="CatDataCell" customModule="MeowMeow" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CatDataCell" rowHeight="101" id="KGk-i7-Jjw" customClass="CatDataCell" customModule="MeowMeow" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="336" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -27,44 +26,57 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lsM-o7-Lda">
-                        <rect key="frame" x="80" y="10" width="216" height="81"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <rect key="frame" x="80" y="10" width="216" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="5vk-0r-Aid"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starFill" translatesAutoresizingMaskIntoConstraints="NO" id="20U-uE-Bbu">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xVc-28-9oz">
                         <rect key="frame" x="10" y="20.5" width="60" height="60"/>
-                        <color key="tintColor" systemColor="systemYellowColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="P3N-Gx-r93"/>
-                            <constraint firstAttribute="height" constant="60" id="mq7-sv-6hS"/>
+                            <constraint firstAttribute="height" constant="60" id="kA1-t4-wl1"/>
+                            <constraint firstAttribute="width" constant="60" id="yIT-el-yII"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGY-I4-It0">
+                        <rect key="frame" x="80" y="65" width="216" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="R2h-to-rOq"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <color key="backgroundColor" red="0.53333333333333333" green="0.92549019607843142" blue="0.76470588235294112" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstItem="g6e-NX-0Hv" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="58Z-Ug-pQz"/>
+                    <constraint firstItem="gGY-I4-It0" firstAttribute="top" secondItem="lsM-o7-Lda" secondAttribute="bottom" constant="5" id="DOG-7a-BUJ"/>
+                    <constraint firstItem="xVc-28-9oz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="JiI-ZY-2Eh"/>
                     <constraint firstItem="g6e-NX-0Hv" firstAttribute="leading" secondItem="lsM-o7-Lda" secondAttribute="trailing" constant="10" id="Sae-bQ-3LT"/>
-                    <constraint firstItem="lsM-o7-Lda" firstAttribute="leading" secondItem="20U-uE-Bbu" secondAttribute="trailing" constant="10" id="ehL-5H-0D8"/>
-                    <constraint firstItem="20U-uE-Bbu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="hOb-KG-aQg"/>
+                    <constraint firstItem="xVc-28-9oz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Xh4-MO-vWF"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="gGY-I4-It0" secondAttribute="bottom" constant="10" id="aiW-8r-Uip"/>
+                    <constraint firstItem="g6e-NX-0Hv" firstAttribute="leading" secondItem="gGY-I4-It0" secondAttribute="trailing" constant="10" id="ffS-HI-2XG"/>
+                    <constraint firstItem="lsM-o7-Lda" firstAttribute="leading" secondItem="xVc-28-9oz" secondAttribute="trailing" constant="10" id="l6h-OV-tjy"/>
                     <constraint firstAttribute="trailing" secondItem="g6e-NX-0Hv" secondAttribute="trailing" constant="10" id="lL1-Uv-Joo"/>
-                    <constraint firstItem="20U-uE-Bbu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="lZ4-m0-DVO"/>
-                    <constraint firstAttribute="bottom" secondItem="lsM-o7-Lda" secondAttribute="bottom" constant="10" id="st2-ln-XCF"/>
+                    <constraint firstItem="gGY-I4-It0" firstAttribute="leading" secondItem="xVc-28-9oz" secondAttribute="trailing" constant="10" id="nOQ-uE-Vbq"/>
                     <constraint firstItem="lsM-o7-Lda" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="vqe-dM-Nme"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="catImaage" destination="20U-uE-Bbu" id="acI-OH-AHL"/>
+                <outlet property="catImage" destination="xVc-28-9oz" id="Bnx-r9-eaf"/>
                 <outlet property="descriptionLabel" destination="lsM-o7-Lda" id="vCF-Dz-R5K"/>
+                <outlet property="interactedDateLabel" destination="gGY-I4-It0" id="ApU-jr-6sI"/>
+                <outlet property="reactionImage" destination="g6e-NX-0Hv" id="bKh-v1-oCA"/>
             </connections>
             <point key="canvasLocation" x="149.27536231884059" y="101.45089285714285"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="like" width="40" height="40"/>
-        <image name="starFill" width="20" height="20"/>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
