--- a/MeowMeow/View/Home.storyboard
+++ b/MeowMeow/View/Home.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,6 +18,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rup-Rp-yaL">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="cT7-Eq-gtN">
+                                        <rect key="frame" x="157" y="398" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="1zK-2d-hUA"/>
+                                            <constraint firstAttribute="height" constant="100" id="AzI-yG-YMb"/>
+                                        </constraints>
+                                        <color key="color" name="Purple"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="0.31" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="cT7-Eq-gtN" firstAttribute="centerX" secondItem="rup-Rp-yaL" secondAttribute="centerX" id="4Ux-xt-2NY"/>
+                                    <constraint firstItem="cT7-Eq-gtN" firstAttribute="centerY" secondItem="rup-Rp-yaL" secondAttribute="centerY" id="Dpp-fh-sld"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mpy-oo-j1m">
                                 <rect key="frame" x="122" y="768" width="170" height="44"/>
                                 <color key="tintColor" systemColor="systemIndigoColor"/>
@@ -31,8 +50,8 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="zmK-bT-nyn">
                                 <rect key="frame" x="78" y="265.5" width="258" height="365"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="atom" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mwt-iY-eg9">
-                                        <rect key="frame" x="8" y="-1.5" width="250" height="252.5"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mwt-iY-eg9">
+                                        <rect key="frame" x="8" y="0.0" width="250" height="250"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="250" id="CCM-SM-d2Q"/>
                                             <constraint firstAttribute="width" constant="250" id="jPO-ql-99Q"/>
@@ -47,7 +66,7 @@
                                                     <constraint firstAttribute="height" constant="100" id="810-mC-0uy"/>
                                                     <constraint firstAttribute="width" constant="100" id="HdM-sR-fkA"/>
                                                 </constraints>
-                                                <color key="tintColor" systemColor="systemGreenColor"/>
+                                                <color key="tintColor" name="Green"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="like"/>
                                                 <connections>
@@ -73,19 +92,25 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="YLD-t5-MTn"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.53333333333333333" green="0.92549019607843142" blue="0.76470588235294112" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="zmK-bT-nyn" firstAttribute="centerY" secondItem="DwV-ze-D5x" secondAttribute="centerY" id="DWw-gv-duk"/>
+                            <constraint firstItem="rup-Rp-yaL" firstAttribute="trailing" secondItem="YLD-t5-MTn" secondAttribute="trailing" id="Elk-4G-1Ua"/>
+                            <constraint firstItem="rup-Rp-yaL" firstAttribute="leading" secondItem="YLD-t5-MTn" secondAttribute="leading" id="NOy-R1-Hbh"/>
+                            <constraint firstAttribute="bottom" secondItem="rup-Rp-yaL" secondAttribute="bottom" id="SM1-GA-0S3"/>
                             <constraint firstItem="mpy-oo-j1m" firstAttribute="centerX" secondItem="DwV-ze-D5x" secondAttribute="centerX" id="X3O-6j-HIR"/>
                             <constraint firstItem="zmK-bT-nyn" firstAttribute="centerX" secondItem="DwV-ze-D5x" secondAttribute="centerX" id="ehE-NJ-Lfk"/>
                             <constraint firstItem="YLD-t5-MTn" firstAttribute="bottom" secondItem="mpy-oo-j1m" secondAttribute="bottom" constant="50" id="gYc-jN-nF4"/>
+                            <constraint firstItem="rup-Rp-yaL" firstAttribute="top" secondItem="DwV-ze-D5x" secondAttribute="top" id="pEN-de-Mtp"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="🐈" id="VAc-vx-gGF"/>
                     <connections>
+                        <outlet property="blockBackground" destination="rup-Rp-yaL" id="yUw-KX-KwE"/>
                         <outlet property="catImage" destination="mwt-iY-eg9" id="FIf-DT-Xnk"/>
                         <outlet property="dislikeButton" destination="KVO-Pr-7i1" id="wHh-kp-Yq7"/>
                         <outlet property="likeButton" destination="1ef-LL-8GC" id="fJW-H8-sDH"/>
+                        <outlet property="loadingSpinner" destination="cT7-Eq-gtN" id="C9g-ta-ij8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qrf-tu-vGm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -122,15 +147,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="atom" catalog="system" width="119" height="128"/>
         <image name="dislike" width="40" height="40"/>
         <image name="like" width="40" height="40"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <namedColor name="Green">
+            <color red="0.030999999493360519" green="0.68599998950958252" blue="0.059000000357627869" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Purple">
+            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
