--- a/MeowMeow/View/MeowMeow.storyboard
+++ b/MeowMeow/View/MeowMeow.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Posts-->
+        <!--My Reactions-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController storyboardIdentifier="Home" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Y6W-OH-hqX" customClass="MeowMeowVC" customModule="MeowMeow" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,7 +23,7 @@
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NSa-Xs-Wax">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <color key="backgroundColor" red="0.55294117647058827" green="0.96470588235294119" blue="0.80784313725490198" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </tableView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -34,37 +34,32 @@
                                     <constraint firstItem="NSa-Xs-Wax" firstAttribute="leading" secondItem="bXh-H8-CzF" secondAttribute="leading" id="mwu-oN-MFd"/>
                                 </constraints>
                             </view>
-                            <view hidden="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KFN-sQ-XAs">
-                                <rect key="frame" x="0.0" y="95" width="414" height="767"/>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KFN-sQ-XAs">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="GbP-bI-ow1">
-                                        <rect key="frame" x="30" y="256.5" width="354" height="254.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="GbP-bI-ow1">
+                                        <rect key="frame" x="30" y="349" width="354" height="120.5"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EmptyCategory" translatesAutoresizingMaskIntoConstraints="NO" id="AtA-gD-edj">
-                                                <rect key="frame" x="29" y="0.0" width="296" height="164"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="164" id="EdG-iY-b9p"/>
-                                                </constraints>
-                                            </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ouhh... apparently there is an error" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VT7-zg-wg5">
-                                                <rect key="frame" x="0.0" y="164" width="354" height="67"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="354" height="67"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="28"/>
-                                                <color key="textColor" systemColor="systemGray2Color"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please try later" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iYl-bM-PvV">
-                                                <rect key="frame" x="110.5" y="231" width="133" height="23.5"/>
+                                                <rect key="frame" x="110.5" y="97" width="133" height="23.5"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                                <color key="textColor" systemColor="systemGray4Color"/>
+                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.55294117647058827" green="0.96470588235294119" blue="0.80784313725490198" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="GbP-bI-ow1" firstAttribute="leading" secondItem="KFN-sQ-XAs" secondAttribute="leading" constant="30" id="7CQ-lj-fJr"/>
                                     <constraint firstItem="GbP-bI-ow1" firstAttribute="centerX" secondItem="KFN-sQ-XAs" secondAttribute="centerX" id="XcO-9P-gu0"/>
+                                    <constraint firstItem="GbP-bI-ow1" firstAttribute="centerX" secondItem="KFN-sQ-XAs" secondAttribute="centerX" id="jw6-WY-vTo"/>
                                     <constraint firstItem="GbP-bI-ow1" firstAttribute="centerY" secondItem="KFN-sQ-XAs" secondAttribute="centerY" id="lQP-ge-uKS"/>
                                     <constraint firstAttribute="trailing" secondItem="GbP-bI-ow1" secondAttribute="trailing" constant="30" id="t89-zs-oRZ"/>
                                 </constraints>
@@ -89,12 +84,13 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <color key="backgroundColor" red="0.53333333333333333" green="0.92549019607843142" blue="0.76470588235294112" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="bXh-H8-CzF" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="08R-6G-psa"/>
                             <constraint firstItem="K4U-tj-Fdh" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="0bC-OW-df8"/>
                             <constraint firstAttribute="bottom" secondItem="K4U-tj-Fdh" secondAttribute="bottom" id="1Zk-KA-hPu"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bXh-H8-CzF" secondAttribute="trailing" id="2iu-aI-MiR"/>
+                            <constraint firstItem="KFN-sQ-XAs" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Cdg-Q8-zML"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="bXh-H8-CzF" secondAttribute="bottom" id="EwV-ec-Ycy"/>
                             <constraint firstItem="bXh-H8-CzF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Hca-dh-fYT"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="KFN-sQ-XAs" secondAttribute="trailing" id="SBF-La-5WP"/>
@@ -104,7 +100,7 @@
                             <constraint firstItem="KFN-sQ-XAs" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="uQ0-na-pAh"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Posts" largeTitleDisplayMode="never" id="4CI-fF-JIP"/>
+                    <navigationItem key="navigationItem" title="My Reactions" largeTitleDisplayMode="never" id="4CI-fF-JIP"/>
                     <connections>
                         <outlet property="blockBackground" destination="K4U-tj-Fdh" id="Icy-dz-jlS"/>
                         <outlet property="dataView" destination="bXh-H8-CzF" id="0LX-ro-v5Q"/>
@@ -126,26 +122,16 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cLM-2w-Q4C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2990" y="65"/>
+            <point key="canvasLocation" x="2633" y="60"/>
         </scene>
     </scenes>
     <color key="tintColor" systemColor="systemGreenColor"/>
     <resources>
-        <image name="EmptyCategory" width="296" height="264"/>
         <namedColor name="Purple">
             <color red="0.83099997043609619" green="0.47499999403953552" blue="0.83099997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
